--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 .container{
   width: 100vw;
   height: 100vh;
@@ -24,6 +23,7 @@
   height: 80%;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
 }
 
 
